NO-TICKET: Refactor the code.